--- a/BeerApp - Senior/package.json
+++ b/BeerApp - Senior/package.json
@@ -9,10 +9,12 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "axios": "^1.4.0",
+    "leaflet": "^1.9.3",
     "lodash": "^4.17.21",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.11.1"
   },
   "devDependencies": {
@@ -20,6 +22,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/leaflet": "^1.9.3",
     "@types/lodash": "^4.14.194",
     "@types/node": "^16.18.28",
     "@types/react": "^18.2.6",
